--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,25 @@
 version: '3.8'
 
+networks:
+ nginx_net:
+  driver: bridge
+
 services:
+ nginx:
+  image: nginx
+  ports:
+   - 8080:80
+  volumes:
+   - ./nginx.conf:/etc/nginx/nginx.conf
+  networks:
+   - nginx_net
+  
  webcolorblue:
   image: fabricioveronez/web-color:blue
   ports:
    - 8081:80
+  networks:
+   - nginx_net
  webcolorgreen:
   image: fabricioveronez/web-color:green
   ports:
@@ -13,6 +28,8 @@ services:
   image: fabricioveronez/conversao-temperatura:v1
   ports:
    - 8083:8080
+  networks:
+   - nginx_net
  conversaotemperatura02:
   image: fabricioveronez/conversao-temperatura:v1
   ports:
