--- a/nginx.conf
+++ b/nginx.conf
@@ -8,7 +8,7 @@ http {
         server_name blue.127.0.0.1.nip.io;
 
         location / {
-            proxy_pass http://webcolorblue;
+            proxy_pass http://webcolorgreen;
         }
     }
 }
